# teakra

./: .gitignore  .gitmodules  CMakeLists.txt
hwtest/dspapbptester/source/: main.cpp
hwtest/dspmemorytester/: Makefile  dspmemorytester.smdh
hwtest/dspmemorytester/source/: main.cpp
hwtest/dsptester/source/: main.cpp
hwtest/dspvictester/source/: main.cpp
include/teakra/: disassembler_c.h  teakra.h  teakra_c.h
src/: CMakeLists.txt  ahbm.h  apbp.cpp  btdmp.cpp  btdmp.h  cityhash.cpp  common_types.h  core_timing.h  crash.h  decoder.h  disassembler.cpp  disassembler_c.cpp  hash.h  interpreter.h  jit.cpp  jit.h  jit_no_ir.h  jit_regs.h  matcher.h  memory_interface.cpp  memory_interface.h  memory_pool.cpp  memory_pool.h  mmio.cpp  operand.h  processor.cpp  processor.h  register.h  shared_memory.h  swap.h  teakra.cpp  teakra_c.cpp  test.h  test_generator.cpp  timer.cpp  timer.h  xbyak_abi.h
src/dsp1_reader/: main.cpp
src/ir/: basic_block.cpp  basic_block.h  ir_emitter.cpp  ir_emitter.h  microinstruction.cpp  microinstruction.h  opcode.h  value.h
src/test_verifier/: CMakeLists.txt  main.cpp
src/translate/: translate.cpp  translate.h
tests/: CMakeLists.txt  audio.cpp  audio.h  audio_types.h  bit_field.h  btdmp.cpp  common_funcs.h  dma.cpp  dsp.h  dsp1.h  firmware.cpp  interpreter.cpp  lle.h  main.cpp  swap.h  timer.cpp
